gcc/testsuite/gcc.dg/func-args-2.c
/* PR c/27420 */
/* { dg-do compile } */
/* { dg-options "-w" } */

void foo();
void foo(struct A a) {}  /* { dg-error "incomplete type" } */
